# py-stock-playground

./: README.md  pyproject.toml
docker/: docker-compose.yml
src/: app.py
src/components/: __init__.py  footer.py  navbar.py
src/pages/: home.py  not_found_404.py
src/utils/: constants.py  settings.py  stock_api.py  trading_signals.py
