[project]
name = "py-stock-playground"
version = "0.1.0"
description = "A Python project for experimenting with stock data analysis and trading strategies."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.3",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dash-renderer>=1.9.1",
    "influxdb-client>=1.49.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.61",
]
